backspace added in html

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Calculator</title>
     <link rel="stylesheet" href="main.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
     <main>
@@ -31,6 +32,7 @@
                 <button class="calculator-button" value="C">C</button>
                 <button class="calculator-button" value="+">+</button>
                 <button class="calculator-button equal" value="=">=</button>
+                <button class="calculator-button" value="backspace"><i class="material-icons">backspace</i></button>
             </div>
         </div>
     </main>
